# cadastre-finder

./: .gitignore  README.md  pyproject.toml
.junie/plans/: improve-search-algorithm-dpe-anchors.md
doc/: plan.md  project.md  prompt.md  tasks.md
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.ts
frontend/src/app/core/models/: search.models.ts
packaging/: build.ps1  server.spec  server_entry.py
packaging/tauri-app/: Cargo.toml  tauri.conf.json
packaging/tauri-app/capabilities/: default.json
packaging/tauri-app/icons/: icon.icns
packaging/tauri-app/src/: main.rs
scripts/: ingest_all.py  precompute_all.py  prepare_regional_pbf.py
src/cadastre_finder/: __init__.py  cli.py  config.py  settings.toml
src/cadastre_finder/api/: main.py  schemas.py
src/cadastre_finder/api/routes/: communes.py  parse.py  search.py
src/cadastre_finder/ingestion/: build_all.py  cadastre.py  dpe.py  osm.py
src/cadastre_finder/processing/: adjacency.py  parcel_adjacency.py
src/cadastre_finder/search/: ad_parser.py  building_filter.py  combo_match.py  dpe_match.py  external_search.py  models.py  neighbor_match.py  orchestrator.py  proximity_match.py  strict_match.py
src/cadastre_finder/ui/: app.py
src/cadastre_finder/utils/: geocoding.py
test/: AVOINE.md  CLOYES.md  ECOUCHE.md  HARQUENCY.md  MARGON.md  MOTTEVILLE.md  NEUVY.md  VENAREY.md
tests/: conftest.py  test_combo_match.py  test_config.py  test_db_integrity.py  test_geocoding.py  test_integration_cloyes.py  test_integration_harquency.py  test_integration_margon.py  test_integration_neuvy.py  test_neighbor_match.py  test_strict_match.py
(+8 files in other folders)
