[project]
name = "cadastre-finder"
version = "0.1.0"
description = "Outil de localisation de biens immobiliers par parcelle cadastrale"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "httpx>=0.27.0",
    "folium>=0.17.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "osmium>=3.7.0",
    "streamlit>=1.35.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
cadastre-finder = "cadastre_finder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cadastre_finder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
